# state_machine

./: .gitignore  AGENTS.md  CMakeLists.txt  EnumUtils.hpp  README.md  StateMachine.hpp  build.sh  main.cpp  run.sh  test_mdspan.cpp  test_state_machine.cpp
example/: CMakeLists.txt  main.cpp
include/state_machine/: EnumUtils.hpp  StateMachine.hpp
tests/: CMakeLists.txt  test_mdspan.cpp  test_state_machine.cpp
